wp-content/themes/the-box-child/style.css
/*
Theme Name: The Box
Theme URI: http://design.altervista.org/thebox/
Author: Design Lab
Author URI: http://design.altervista.org
Template: the-box
Description: Simple and minimal two columns Theme: custom header, custom background, custom colors, post thumbnails, post formats
Version: 1.4.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: thebox-child
Tags: 

FontAwesome License: SIL Open Font License - http://scripts.sil.org/OFL
This Theme is licensed under the GPL.
*/
@import "jquery.fullPage.css";
@import "colorbox.css";
@import "nanoscroller.css";

@font-face {
    font-family: pagella;
    src: url(fonts/texgyrepagella-regular.otf);
}
@font-face {
    font-family: baskerville;
    src: url(fonts/LibreBaskerville-Regular.otf);
}
@font-face{
    font-family: oswald;
    src: url(fonts/Oswald-Medium.ttf);
}

/*Loading*/

.page_load {
	position: fixed;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 9999;
        background-color: #fff;
	/*background: url(images/ui/preload.gif) center no-repeat #fff;*/
}

.loading {
  position: absolute;
  top: 50%;
  left: 50%;
}
.loading-bar {
  display: inline-block;
  width: 4px;
  height: 18px;
  border-radius: 4px;
  animation: loading 1s ease-in-out infinite;
}
.loading-bar:nth-child(1) {
  background-color: #660000;
  animation-delay: 0s;
}
.loading-bar:nth-child(2) {
  background-color: #660000;
  animation-delay: 0.09s;
}
.loading-bar:nth-child(3) {
  background-color: #660000;
  animation-delay: .18s;
}
.loading-bar:nth-child(4) {
  background-color: #660000;
  animation-delay: .27s;
}

@keyframes loading {
  0% {
    transform: scale(1);
  }
  20% {
    transform: scale(1, 2.2);
  }
  40% {
    transform: scale(1);
  }
}

/*Loading end*/

/*Scrollbar*/
/*::-webkit-scrollbar {
    width: 12px;
}
 
 Track 
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
 
 Handle 
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: rgba(255,0,0,0.8); 
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}
::-webkit-scrollbar-thumb:window-inactive {
	background: rgba(255,0,0,0.4); 
}*/
/*Scrollbar end*/

html{
	height: 100vh;
	width: 100%;
}

body{
    margin: 0px;
    padding: 0px;
}

header.site-header{
	width: 100vw;
	height: 7vh;
	background: linear-gradient(
      rgba(102, 0, 0, 0.85), 
      rgba(102, 0, 0, 0.85)
    ),url(images/cardboard.jpg);
        background-size: cover;
        position: absolute;
        z-index: 3;
        margin: 0;
}

#header_logo{
    height:5vh;
    margin: 1vh;
}

div.top_bar{
    /*display:none;*/
    position: absolute;
}

div#primary.content-area{
	width: 100vw;
        top: 5vh;
        height: 93vh;
        position: relative;
}

/*div#content.content-area{
    position: absolute;
    height: 93vh;
}*/
div#fullpage.content-area{
    position: absolute;
    height: 93vh;
}

#secondary{
	display: none;
}

#page{
	width: 100%;
	height: 100vh;
	margin: 0px;
	padding: 0px;
}

body{
    margin: 0px;
    padding: 0px;
}

h1{
    margin: 0px;
    padding: 0px;
    /*position: inherit;*/
}

p{
    margin: 0px;
    padding: 0px;
    /*position: inherit;*/
}
.scene
{
    position: relative;
    width: 100%;
    height: 93vh;
    /*overflow: hidden;*/
}

.layer{
    margin: 0px;
    padding: 0px;
}

#head_image{
    position: relative !important;
    width: 110%;
    left: -5% !important;
    height: 17%;    
}
#head_image div{
    /*background-image: url(images/family_header.jpg);*/
    background: linear-gradient(
      rgba(186, 36, 49, 0.35), 
      rgba(186, 36, 49, 0.35)
    ), url(images/family_header.jpg);
    background-position: center;   
    background-size: cover;
    height: 100%;
    /*z-index: -1;*/
}

#head_image_bot{
    position:relative;
    top:-3%;
    background-color: white;
    height: 4%;
}

#head_image_bot div{
    position: relative;
    background: linear-gradient(
      rgba(102, 0, 0, 0.85), 
      rgba(102, 0, 0, 0.85)
    ),url(images/cardboard.jpg);
    background-size: cover;
    height: 25%;
}

ul{
    list-style: none;
}

ul li{
    display: inline-block;
    position: relative;
}

ul.social{
    float: right;
    height: 4.5vh;
    width: auto;
    margin-bottom: 0;
    padding-right: 2vmin;    
}

.social li{
    height: 4.8vh;
    min-height: 30px;
    width: 4.125vh; 
    min-width: 26px;
    z-index: 3;
}

.social li a{
    display: inherit;
    position: relative;
    height: 100%;
    width: 100%;
    background-size: contain;
    background-repeat: no-repeat;
}

#twitter{
    background-image: url(images/ui/twitter_idle.png);
}
#twitter:hover{
    background-image: url(images/ui/twitter_hover.png);
}

#facebook{
    background-image: url(images/ui/fb_idle.png);
}
#facebook:hover{
    background-image: url(images/ui/fb_hover.png);
}

#draugiem{
    background-image: url(images/ui/draugiem_idle.png);
}
#draugiem:hover{
    background-image: url(images/ui/draugiem_hover.png);
}

ul.menu{
    width: 100vw;
    margin-left: -20vw;
    margin-top: -5%;
    padding: 0;
}

ul.menu li{
    width: 10.5vw;
    min-width: 106px;
    padding: 0 2vw 0 2vw;
}

ul.menu a{
    height: auto;
    width: 10.5vw;
    text-decoration: none;   
}

ul.menu a:hover p{
    color: #B92431;
}

ul.menu img{
    height: auto;
    width: 10.5vw;
}

ul.menu p{
    width: 70%;
    font-family: oswald;
    font-size: 1vmax;
    text-transform: uppercase;
    text-decoration: none;
    color: #000000;
    margin: auto;
    padding-top: 10%;
}

#m_origin:hover img{
    content: url(images/menu/origin_hover.png);
}

#m_evolution:hover img{
    content: url(images/menu/evolution_hover.png);
}

#m_structure:hover img{
    content: url(images/menu/structure_hover.png);
}

#m_science:hover img{
    content: url(images/menu/science_hover.png);
}
/* ... */

